--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
+<!doctype html>
+<html>
+<head>
+
+</head>
+
+<body>
+
+<main>
+
+
+<article>
+
+<section>
+
+
+
 I am a freshman pursuing my masters in computer science at Northwest Missouri State University.
 I am from Miryalaguda, India. I have completed my graduation in Computer Science from Sri Indu College of Engineering and Technology.
 I had my schooling in Sri Chaitanya Techno School. My hobbies are watching movies and playing games.
 I am looking forward to work as Hadoop developer in one of the multinational company.
 My areas of interest include Hadoop, Data Mining, Artifical Intelligence.
 
+</section>
+
+</article>
+
+</main>
+
+<footer>
+
+</footer>
+&copy; millindar
+</body>
+
+</html>
