--- a/Function.html
+++ b/Function.html
@@ -21,7 +21,7 @@
                               <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="function.html">Arithmetic calculations</a>
+                              <a class="nav-link" href="Function.html">Arithmetic calculations</a>
                             </li>
                           </ul>
                           <form class="form-inline mt-2 mt-md-0">
