--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                               <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="function.html">Arithmetic calculations</a>
+                              <a class="nav-link" href="Function.html">Arithmetic calculations</a>
                             </li>
                           </ul>
                           <form class="form-inline mt-2 mt-md-0">
@@ -58,6 +58,7 @@
         <hr> 
           &copy;2019 Millindar Reddy
           Contact:Millindar@GMAIL.COM
+
       </footer> 
 </body>
 
