--- a/Function.html
+++ b/Function.html
@@ -61,5 +61,11 @@ function mul() {
 }
  
 </script>
+ <footer>  
+    <hr> 
+      &copy;2019 Millindar Reddy
+      Contact:milindarreddy@gmail.com
+
+  </footer> 
 </body>
 </html>
