--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
       <footer>  
         <hr> 
           &copy;2019 Millindar Reddy
-          Contact:Millindar@GMAIL.COM
+          Contact:milindarreddy@gmail.com
 
       </footer> 
 </body>
