--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </main>
     <footer>   
        &copy;2019 Millindar Reddy
-       Contact:Millindar@GMAIL.COM
+       Contact:milindarreddy@gmail.com
 
     </footer>
 
