--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         <input type="number" name="PhoneNumber" placeholder="enter here"><br>
                         message<br>
                         <input type="text" name="Message" placeholder="enter here" size="45" height="30"><br><br>
-                        <input type="button" value="SUBMIT">
+                        <input type="button" onclick="location.href='contact.html';" value="SUBMIT">
                         
 
                 </form>
