--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="milindar.css" rel="stylesheet">
+        <link href="./style/milindar.css" rel="stylesheet">
 <title>Contact</title>
 </head>
 <body>
@@ -23,8 +23,11 @@
                               <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="Function.html">Arithmetic calculations</a>
+                              <a class="nav-link" href="Function.html">Area of Rectangle</a>
                             </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="qunitTest.html">QUnit Test</a>
+                              </li>
                           </ul>
                           <form class="form-inline mt-2 mt-md-0">
                             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
